--- a/eventfinder.css
+++ b/eventfinder.css
@@ -62,10 +62,10 @@ h1 {
 }
 
 #map-window {
-   width: 100%;
+   width: 50%;
    height: 100vh;
    position: fixed;
-   z-index: -1;
+   margin-left: 50%;
 }
 
 #map {
