--- a/eventfinder.css
+++ b/eventfinder.css
@@ -23,7 +23,8 @@ body{
 
 h1 {
    text-align: center;
-   margin: 0.5em 0;
+   margin: 0.5em 1em;
+   font-size: 2.8em;
 }
 
 #input-fields{
@@ -33,9 +34,12 @@ h1 {
 }
 
 #user-address {
-   margin-bottom: 10px;
-   width: 100%;
-   max-width: 320px;
+margin-bottom: 1.3em;
+width: 100%;
+max-width: 350px;
+height: 1.5em;
+font-size: 1.1em;
+padding-left: 0.4em;
 }
 
 #distance-slider {
@@ -46,10 +50,16 @@ h1 {
    margin: auto;
 }
 
+#miles{
+   font-size: 1.2em;
+}
+
 #findEvents{
    margin-top: 1em;
    width: 60%;
    max-width: 150px;
+   font-size: 1.1em;
+   padding: 0.2em;
 }
 
 #results-table{
@@ -76,7 +86,7 @@ h1 {
 
 #progress{
    display: none;
-   z-index: 2;
+   z-index: 3;
    position: absolute;
    left: 0;
    right: 0;
@@ -84,6 +94,24 @@ h1 {
    height: 100%;
    opacity: 0.7;
    background: #ffffff url('progressanimation.gif') no-repeat fixed center;
+}
+
+#scroll-icon{
+   display: none;
+   z-index: 2;
+   position: fixed;
+   left: 3%;
+   bottom: 3%;
+   height: 100px;
+   width: 100px;
+   opacity: 0.6;
+   background: url('scroll-top.png') no-repeat;
+   background-size: contain;
+}
+
+#scroll-icon:hover{
+   opacity: 0.8;
+   cursor: pointer;
 }
 
 
