--- a/eventfinder.css
+++ b/eventfinder.css
@@ -127,6 +127,15 @@ padding-left: 0.4em;
    padding: 5%;
 }
 
+#no-events{
+   display: none;
+   width: 80%;
+   padding: 10%;
+   color: #00163a;
+   background: #ffffff;
+   font-size: 1.2em;
+}
+
 .selected{
    background: rgba(255, 255, 255, 0.4) !important;
    outline: 2px solid #A2A2DB !important;
