Found error with mini map
Next step will be fixing the API query string for meetup

--- a/eventfinder.css
+++ b/eventfinder.css
@@ -172,6 +172,16 @@ padding-left: 0.4em;
    font-weight: bold;
 }
 
+.event-map{
+   text-align: center;
+   margin: 3em 0 1em;
+}
+
+.mini-map{
+   width: 90%;
+   max-width: 500px;
+}
+
 a{
    text-decoration: none;
 }
